--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <form class="Login">
-    <h1>Login</h1>
+    <h1>MASUK</h1>
     <input type="text" class="username" placeholder="username">
     <input type="password" class="password" placeholder="password">
     <input type="submit" value="Login">
